# mowthosOS

./: .env.example  .gitignore  .gitmodules  BACKEND_TESTING_GUIDE.md  README.md  README_REORGANIZATION.md  alembic.ini  main.py  pyproject.toml  requirements.txt  run.py  test_api_routes.py  test_mowthos_api.py
.cursor/rules/: advisor-role.mdc
alembic/: env.py
docs/: .env.example  FRONTEND_CURSOR_AGENT_INSTRUCTIONS.md  FRONTEND_IMPLEMENTATION_GUIDE.md  README.md  SUBMODULE-WARNING.md  dependency-management.md  deployment-proposal.md  development-guidelines.md  frontend-api-client-example-updated.ts  frontend-api-client-example.ts  frontend-api-configuration.ts  frontend-api-integration-guide.md  frontend-api-types-extended.ts  frontend-api-types.ts  quick-reference.md  subscription-flow.md  tech-stack-guidelines.md
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py
src/api/routes/: __init__.py  auth.py  clusters.py  devices.py  health.py  mower.py  payments.py
src/core/: __init__.py  auth.py  cache.py  config.py  database.py  password.py  session.py
src/models/: __init__.py  enums.py  schemas.py
src/models/database/: __init__.py  billing.py  clusters.py  devices.py  marketplace.py  users.py
src/services/: __init__.py  base.py
src/services/cache/: __init__.py  service.py
src/services/cluster/: __init__.py  engine.py  mapbox.py  service.py
src/services/device/: __init__.py  service.py
src/services/mower/: __init__.py  service.py
src/services/notification/: __init__.py  service.py
src/services/payment/: stripe_service.py
src/services/scheduling/: __init__.py  service.py
src/services/user/: __init__.py  service.py
src/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py
tests/test_api/: test_health.py
