[project]
name = "mowthosos"
version = "0.1.0"
description = "Professional robotic mower management system"
authors = [
    {name = "MowthosOS Team"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    # Mowthos-Cluster-Logic dependencies
    "sqlalchemy (>=2.0.23,<3.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "geopy (>=2.4.0,<3.0.0)",
    "alembic (>=1.13.0,<2.0.0)",
    "psycopg2-binary (>=2.9.9,<3.0.0)",
    "email-validator (>=2.0.0,<3.0.0)",
    "scikit-learn (>=1.3.0,<2.0.0)",
    # Road-aware neighbor detection dependencies (updated for Python 3.13 compatibility)
    "osmnx (>=1.6.0,<2.0.0)",
    "shapely (>=2.0.0,<3.0.0)",
    "numpy (>=1.26.4,<2.0.0)",
    "pandas (>=2.1.0,<3.0.0)",
    "geopandas (>=0.14.0,<1.0.0)",
    "matplotlib (>=3.8.0,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "stripe (>=12.4.0,<13.0.0)",
    # PyMammotion dependencies
    "bleak (>=0.21.0,<1.0.0)",
    "protobuf (>=5.29.3,<6.0.0)",
    "py-jsonic (>=0.0.2,<1.0.0)",
    "aiohttp (>=3.9.1,<4.0.0)",
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "alicloud-gateway-iot (>=1.0.0,<2.0.0)",
    "alibabacloud-apigateway-util (>=0.0.2,<1.0.0)",
    "alibabacloud-iot-api-gateway (>=0.0.4,<1.0.0)",
    "bleak-retry-connector (>=3.5.0,<4.0.0)",
    "jsonic (>=1.0.0,<2.0.0)",
    "mashumaro (>=3.13,<4.0.0)",
    "orjson (>=3.9.15,<4.0.0)",
    "betterproto[compiler] (>=1.2.5,<2.0.0)",
    "async-timeout (>=4.0.3,<5.0.0)",
    "cryptography (>=43.0.1,<44.0.0)",
    "crcmod (>=1.7,<2.0.0)",
    "redis (>=5.0.0,<6.0.0)",
    "aioredis (>=2.0.0,<3.0.0)",
    "passlib[bcrypt] (>=1.7.0,<2.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "bcrypt (>=4.0.0,<5.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
httpx = "^0.28.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.17.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
